--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-reanimated": "^3.7.0",
     "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
